# ffmpeg-progress

./: .cruft.json  .gitignore  .pre-commit-config.yaml  .prettierignore  .pylintrc  .rtfd-requirements.txt  .wiswa.jsonnet  .yarnrc.yml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE.txt  README.md  ffmpeg_progress.py  package.json  psutil.pyi  pyproject.toml  setup.py
.github/: FUNDING.yml  dependabot.yml
.github/instructions/: general.instructions.md
.github/workflows/: appimage.yml  publish.yml  pyinstaller.yml  qa.yml  tests.yml
.stubs/: psutil.pyi
docs/: conf.py  index.rst
ffmpeg_progress/: __init__.py  __main__.py  constants.py  exceptions.py  lib.py  main.py  types.py  typing.py  utils.py
man/: ffmpeg-progress.1
tests/: conftest.py  test_lib.py  test_main.py  test_utils.py
